--- a/Sjuklöner/Views/Claims/Create.cshtml
+++ b/Sjuklöner/Views/Claims/Create.cshtml
@@ -7,13 +7,13 @@
 <div class="row margin-breadcrumb">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item breadcrumb-font"><a class="breadcrumb-padding" href="../Account/Login">Hem</a></li>
+            <li class="breadcrumb-item breadcrumb-font">@Html.ActionLink("Ansökningar", "Index", null, new { @class = "breadcrumb-padding" })</li>
             <li class="breadcrumb-item active breadcrumb-font breadcrumb-padding" aria-current="page">Organisationsnummer</li>
         </ol>
     </nav>
 </div>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Claims", new { claimNumber = Model.ClaimReference }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.ClaimReference)
@@ -25,7 +25,7 @@
         <p class="page-header col col-md-10">Ansökan om sjuklöneersättning</p>
         <nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>
         <br>
-        <p class="col col-md-offset-2 col-md-10 second-page-header">Steg 1: Ange organisationsnummer och sjukperiod</p>
+        @*<p class="col col-md-offset-2 col-md-10 second-page-header">Steg 1: Ange organisationsnummer och sjukperiod</p>*@
     </div>
 
     <div class="row">
@@ -114,13 +114,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10 align-bottom2">
                     @Html.EditorFor(model => model.AssistantSSN, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             @*<div class="form-group">
                 @Html.LabelFor(model => model.StandInSSN, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -192,6 +192,14 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -339,10 +347,19 @@
                 </div>
             }
 
+            <div class="row">
+
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input class="btn btn-default" type="submit" value="Till steg 2" id="assistance-claim-btn" />
+                <div class="col col-md-offset-2 col-md-1">
+                    <input class="btn btn-primary btn-primary-small" type="submit" name="answer" value="Till steg 2" id="proceed" />
                 </div>
+                <div class="col col-md-1">
+                    <input class="btn btn-secondary btn-secondary-small" type="submit" name="answer" value="Spara" id="save" />
+                </div>
+                <div class="col col-md-1">
+                    <input class="btn btn-secondary btn-secondary-small" type="submit" name="answer" value="Avbryt" id="cancel" />
+                </div>
+            </div>
             </div>
            
 
