--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -6,7 +6,7 @@
 <body>
     <div class="row index-page-margin">
         <p class="col col-md-2"></p>
-        <p class="page-header col col-md-10">Ansökningar</p>
+        <p class="page-header col col-md-10">Ansökningar, handläggare</p>
         @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
     </div>
 
@@ -17,6 +17,100 @@
             @Html.ActionLink("Skapa ny ansökan", "Create")
         </div>
     </div>*@
+
+    <hr class="claim-divider col-md-offset-2" />
+    <div class="row">
+        <div class="col col-md-offset-2">
+            <div class="second-page-header">
+                Inkorgen
+            </div>
+            @if (Model.UnderReviewClaims?.Count() > 0)
+            {
+                <table class="table">
+                    <tr>
+                        <th class="small-col">
+                            Referensnummer
+                        </th>
+                        <th class="small-col">
+                            Inkommen datum
+                        </th>
+                        <th class="small-col">
+                            Assistansbolag
+                        </th>
+                        <th class="small-col">
+                            Assistentens personnummer
+                        </th>
+                        <th class="small-col">
+                            Kundens personnummer
+                        </th>
+                        <th class="small-col">
+                            Första sjukdag
+                        </th>
+                        <th class="small-col">
+                            Sista sjukdag
+                        </th>
+                        <th class="small-col">
+                            Antal sjukdagar
+                        </th>
+                        <th class="medium-col">
+                            Yrkat belopp (Kr)
+                        </th>
+                        @*<th></th>*@
+                    </tr>
+
+                    @foreach (var item in Model.UnderReviewClaims)
+                    {
+                        <tr>
+                            <td>
+                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("DecisionBoard", "Claims", new { id = item.Id })">
+                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                                </a>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AssistantSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                            </td>
+                            @*<td>
+                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                            </td>*@
+                        </tr>
+                    }
+
+                </table>
+            }
+            else
+            {
+                <div class="padding-left-no-claim font-size-16">
+                    Det finns inga ansökningar i inkorgen.
+                </div>
+                <br />
+            }
+        </div>
+    </div>
+    <hr class="claim-divider col-md-offset-2" />
+
     <div class="row">
         <div class="col col-md-offset-2">
             <div class="second-page-header">
@@ -30,7 +124,13 @@
                             Referensnummer
                         </th>
                         <th class="small-col">
-                            Senaste statusändring
+                            Avslagen datum
+                        </th>
+                        <th class="small-col">
+                            Assistansbolag
+                        </th>
+                        <th class="small-col">
+                            Assistentens personnummer
                         </th>
                         <th class="small-col">
                             Kundens personnummer
@@ -41,22 +141,31 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
+                        <th class="small-col">
+                            Antal sjukdagar
+                        </th>
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
-                        <th></th>
+                        @*<th></th>*@
                     </tr>
 
                     @foreach (var item in Model.RejectedClaims)
                     {
                         <tr>
                             <td>
-                                <a target="_blank" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
+                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
                                     @Html.DisplayFor(modelItem => item.ReferenceNumber)
                                 </a>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AssistantSSN)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
@@ -68,13 +177,16 @@
                                 @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
                             </td>
                             <td>
+                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                            </td>
+                            @*<td>
                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
                                 @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                            </td>
+                            </td>*@
                         </tr>
                     }
 
@@ -163,12 +275,14 @@
     </div>
     <hr class="claim-divider col-md-offset-2" />*@
 
+    
+
     <div class="row">
         <div class="col col-md-offset-2">
             <div class="second-page-header">
-                Under handläggning
+                Godkända
             </div>
-            @if (Model.UnderReviewClaims?.Count() > 0)
+            @if (Model.ApprovedClaims?.Count() > 0)
             {
                 <table class="table">
                     <tr>
@@ -176,7 +290,7 @@
                             Referensnummer
                         </th>
                         <th class="small-col">
-                            Inkommen
+                            Godkänd datum
                         </th>
                         <th class="small-col">
                             Assistansbolag
@@ -199,14 +313,17 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
-                        <th></th>
+                        <th class="medium-col">
+                            Beslutat belopp (Kr)
+                        </th>
+                        @*<th></th>*@
                     </tr>
 
-                    @foreach (var item in Model.UnderReviewClaims)
+                    @foreach (var item in Model.ApprovedClaims)
                     {
                         <tr>
                             <td>
-                                <a target="_blank" href="@Url.Action("DecisionBoard", "Claims", new { id = item.Id })">
+                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
                                     @Html.DisplayFor(modelItem => item.ReferenceNumber)
                                 </a>
                             </td>
@@ -235,90 +352,13 @@
                                 @Html.DisplayFor(modelItem => item.ClaimSum)
                             </td>
                             <td>
-                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                @*@Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                            </td>
-                        </tr>
-                    }
-
-                </table>
-            }
-            else
-            {
-                <div class="padding-left-no-claim font-size-16">
-                    Det finns inga ansökningar som är under handläggning.
-                </div>
-                <br />
-            }
-        </div>
-    </div>
-    <hr class="claim-divider col-md-offset-2"/>
-
-    <div class="row">
-        <div class="col col-md-offset-2">
-            <div class="second-page-header">
-                Godkända
-            </div>
-            @if (Model.ApprovedClaims?.Count() > 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th class="small-col">
-                            Referensnummer
-                        </th>
-                        <th class="small-col">
-                            Senaste statusändring
-                        </th>
-                        <th class="small-col">
-                            Kundens personnummer
-                        </th>
-                        <th class="small-col">
-                            Första sjukdag
-                        </th>
-                        <th class="small-col">
-                            Sista sjukdag
-                        </th>
-                        <th class="medium-col">
-                            Yrkat belopp (Kr)
-                        </th>
-                        <th class="medium-col">
-                            Beslutat belopp (Kr)
-                        </th>
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model.ApprovedClaims)
-                    {
-                        <tr>
-                            <td>
-                                <a target="_blank" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
-                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
-                                </a>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
-                            </td>
-                            <td>
                                 @Html.DisplayFor(modelItem => item.DecidedSum)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
                                 @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                            </td>
+                            </td>*@
                         </tr>
                     }
 
@@ -333,5 +373,6 @@
             }
         </div>
     </div>
+    <hr class="claim-divider col-md-offset-2" />
 
 </body>
