--- a/Sjuklöner/Views/Account/Login.cshtml
+++ b/Sjuklöner/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <p class="col col-md-2"></p>
     <p class="page-header1 col col-md-10">Ansökan om sjuklöneersättning</p>
-    <nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>
+    <nl class="col col-md-offset-2 font-size-16">enligt LSS §9 punkt 2</nl>
     <br/>
 </div>
 <br />
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Logga in" class="btn btn-default" />
+                    <input type="submit" value="Logga in" class="btn btn-primary btn-primary-small" />
                 </div>
             </div>
             <br>
