--- a/Sjuklöner/Views/Claims/Delete.cshtml
+++ b/Sjuklöner/Views/Claims/Delete.cshtml
@@ -3,30 +3,17 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="row index-page-margin">
+    <p class="col col-md-2"></p>
+    <p class="page-header col col-md-10">Ta bort ansökan</p>
+    <nl class="col col-md-offset-2 font-size-16">Klicka på "Bekräfta" nedan för att ta bort denna ansökan</nl>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+</div>
+<br />
+<br />
 <div>
-    <h4>Claim</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OwnerId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OwnerId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StatusId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StatusId)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.ReferenceNumber)
         </dt>
@@ -44,30 +31,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DeadlineDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeadlineDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomerFirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CustomerFirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomerLastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CustomerLastName)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.CustomerSSN)
         </dt>
 
@@ -76,43 +39,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HourlySalary)
+            @Html.DisplayNameFor(model => model.StatusDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HourlySalary)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HolidayPayRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HolidayPayRate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PayrollTaxRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PayrollTaxRate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.InsuranceRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.InsuranceRate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PensionRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PensionRate)
+            @Html.DisplayFor(model => model.StatusDate)
         </dd>
 
         <dt>
@@ -132,134 +63,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HoursQualifyingDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HoursQualifyingDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HolidayPayQualDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HolidayPayQualDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PayrollTaxQualDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PayrollTaxQualDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.InsuranceQualDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.InsuranceQualDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PensionQualDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PensionQualDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ClaimQualDay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ClaimQualDay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HoursDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HoursDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HourlySickPay)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HourlySickPay)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SickPayDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SickPayDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HolidayPayDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HolidayPayDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnsocialHoursBonusDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnsocialHoursBonusDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OnCallDutyDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OnCallDutyDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PayrollTaxDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PayrollTaxDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.InsuranceDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.InsuranceDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PensionDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PensionDay2To14)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ClaimDay2To14)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ClaimDay2To14)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.ClaimSum)
         </dt>
 
@@ -267,14 +70,222 @@
             @Html.DisplayFor(model => model.ClaimSum)
         </dd>
 
+        @*<dt>
+                @Html.DisplayNameFor(model => model.CustomerSSN)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.CustomerSSN)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HourlySalary)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HourlySalary)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HolidayPayRate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HolidayPayRate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PayrollTaxRate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PayrollTaxRate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.InsuranceRate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.InsuranceRate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PensionRate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PensionRate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.QualifyingDate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.QualifyingDate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.LastDayOfSicknessDate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.LastDayOfSicknessDate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HoursQualifyingDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HoursQualifyingDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HolidayPayQualDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HolidayPayQualDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PayrollTaxQualDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PayrollTaxQualDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.InsuranceQualDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.InsuranceQualDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PensionQualDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PensionQualDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ClaimQualDay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ClaimQualDay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HoursDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HoursDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HourlySickPay)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HourlySickPay)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.SickPayDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.SickPayDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.HolidayPayDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.HolidayPayDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.UnsocialHoursBonusDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.UnsocialHoursBonusDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.OnCallDutyDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.OnCallDutyDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PayrollTaxDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PayrollTaxDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.InsuranceDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.InsuranceDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PensionDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PensionDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ClaimDay2To14)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ClaimDay2To14)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ClaimSum)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ClaimSum)
+            </dd>*@
+
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
+        <div class="row">
+
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <div class="col col-md-offset-2 col-md-1 no-padding-left">
+                <input type="submit" value="Bekräfta" class="btn btn-danger btn-danger-small" />
+            </div>
+            <div class="col col-md-1">
+                @Html.ActionLink("Avbryt", "Index", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
+            </div>
+        </div>
         </div>
     }
 </div>
